engine/codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__textarea__tests__textarea_halfwidth_sound_marks_wrap_and_align_with_cursor.snap
---
source: tui/src/bottom_pane/textarea.rs
expression: "snapshots.join(\"\\n\\n\")"
---
dakuten
cursor: Some((1, 1))
"12ｶﾞ" Hidden by multi-width symbols: [(3, " ")]
"x   "


handakuten
cursor: Some((0, 2))
"ab "
"ﾊﾟc" Hidden by multi-width symbols: [(1, " ")]
"   "


standalone
cursor: Some((0, 2))
"a "
"ﾞb"
"  "
