engine/codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__textarea__tests__textarea_tabs_render_as_spaces_and_align_with_cursor.snap
---
source: tui/src/bottom_pane/textarea.rs
expression: "format!(\"cursor: {cursor:?}\\n{}\", terminal.backend())"
---
cursor: (62, 0)
"❌ Simulation formatter[large/dataset.py] 7.4 ms 8.1 ms -8.29%                                      " Hidden by multi-width symbols: [(1, " ")]
